--- a/nginx/conf.d/invoiceninja.conf
+++ b/nginx/conf.d/invoiceninja.conf
@@ -1,29 +1,50 @@
-server {
-	listen 80;
-	server_name _;
+user www-data;
 
-	access_log /var/log/nginx/invoice-ninja.access.log;
-	error_log /var/log/nginx/invoice-ninja.error.log;
+events {
+  worker_connections 768;
+}
 
-    root /var/www/app/public;
-	index index.php;
-
-	location = /favicon.ico {
-		access_log off;
-		return 204;
-	}
-
-    location / {
-        try_files $uri $uri/ /index.php?$args;
+http {
+    upstream backend {
+        server 127.0.0.1:9000;
     }
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    gzip on;
+    gzip_disable "msie6";
 
-    location ~ \.php$ {
-        try_files $uri =404;
-		include fastcgi_params;
-		fastcgi_pass 127.0.0.1:9000;
-		fastcgi_index index.php;
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-	}
+    server {
+        listen      80 default;
+        server_name your_ininja_site;
+
+        root /var/www/app/public;
+
+        index index.php;
+
+        charset utf-8;
+
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
+
+        sendfile off;
+
+        location ~ \.php$ {
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass backend;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_intercept_errors off;
+            fastcgi_buffer_size 16k;
+            fastcgi_buffers 4 16k;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
+    }
 }
