--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
 
     server {
         listen      80 default;
-        server_name _;
+        server_name your_ininja_site;
 
         root /var/www/app/public;
 
